[project]
name = "leds-bailongos"
version = "0.1.0"
description = ""
authors = [
    {name = "Yo"}
]
readme = "README.md"
packages = [{include = "leds_bailongos"}]

[tool.poetry.dependencies]
python = "^3.13"
rpi_ws281x = {version = "^5.0.0", platform = "linux"}
Adafruit-Blinka = {version = "^8.32.0", platform = "linux"}
adafruit-circuitpython-neopixel = {version = "^6.3.11", platform = "linux"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

